--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
   "author": "ReactifyStudio",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "config": "^3.3.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "mongoose": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.6.4",
+    "multer": "^1.4.5-lts.1",
     "shortid": "^2.2.16",
     "valid-url": "^1.0.9"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.22"
   }
 }
