--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^7.6.4",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "shortid": "^2.2.16",
     "valid-url": "^1.0.9"
